# bdbc-atlas-registration

./: .gitignore  README.md  setup.cfg
atlas_registration/: __init__.py  alignment.py  batch.py  command.py  defaults.py  output.py  registration.py  rois.py  types.py
atlasregistration/: __init__.py  alignment.py  batch.py  rois.py
