[metadata]
name = bdbc-atlas-registration
version = 0.2.0
author = Keisuke Sehara
author_email = keisuke.sehara@gmail.com
description = A toolkit and pipeline for Allen CCF atlas registration on single-photon datasets.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BraiDyn-BC/bdbc-atlas-registration
project_urls =
    Bug Tracker = https://github.com/BraiDyn-BC/bdbc-atlas-registration/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    h5py
    pandas
    imageio
    tqdm
    opencv-python
    ks-affine2d
    ks-mesoscaler
    ks-affine-aligner
    bdbc-session-explorer>=0.3

[options.entry_points]
console_scripts = 
    batch-atlas-registration = atlas_registration.command:run

[flake8]
ignore =
    E501
    E221
    E712

